--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <html>
     <head>
     <title>
-        Srikanth Naini
+        My First Heading
     </title>    
     
     </head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>  Srikanth Naini</h1>
 
 
 </body>
 </html>
+
