favorite place added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 <body>
 
 <h1>  Srikanth Naini</h1>
+<h5>
+Niagara Falls</h5>
+
+
+</h5>
+<p>When it comes to the natural wonders of the world, <b>Niagara Falls</b> continues to intrigue.
+     Created as water flowed into the Niagara River from <b>the North American</b> Great Lakes 12,000 years ago, 
+    these three spectacular waterfalls form the hub of a sightseeing and 
+    recreational area with enough outdoor and indoor activities to make a great weekend getaway or
+     extended vacation.</p>
+
 
 
 </body>
