--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@ Niagara Falls</h5>
      extended vacation.</p>
 
 
+  <hr>
+    <h4> Directions from Maryville to Kansas City</h4>
+<p> 1.Book a cab from Maryville to Kansas Airport.
+    2. Finish the check-in process through online.
+       1. Take boarding pass from the self service kiosk.
+       2. Waiting for the flight
+       3. Board your flight.
+    3. Complete your check out process at Hyderabad
+</p>
+
 
 </body>
 </html>
