--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@ Niagara Falls</h5>
 
   <hr>
     <h4> Directions from Maryville to Kansas City</h4>
-<p> 1.Book a cab from Maryville to Kansas Airport.
-    2. Finish the check-in process through online.
-       1. Take boarding pass from the self service kiosk.
-       2. Waiting for the flight
-       3. Board your flight.
-    3. Complete your check out process at Hyderabad
-</p>
+<ol> 
+    <li>1.Book a cab from Maryville to Kansas Airport.</li>>
+   <li> 2. Finish the check-in process through online.</li>
+    <li>3.Take boarding pass from the self service kiosk.</li>
+    <li>4.Waiting for the flight</li>
+     <li>  5. Board your flight.</li>
+    
+
+</ol>
 
 
 </body>
