unordered list added

--- a/index.html
+++ b/index.html
@@ -23,16 +23,35 @@ Niagara Falls</h5>
 
 
   <hr>
-    <h4> Directions from Maryville to Kansas City</h4>
-<ol> 
-    <li>1.Book a cab from Maryville to Kansas Airport.</li>>
-   <li> 2. Finish the check-in process through online.</li>
-    <li>3.Take boarding pass from the self service kiosk.</li>
-    <li>4.Waiting for the flight</li>
-     <li>  5. Board your flight.</li>
-    
+  <h4> Directions from Maryville to Kansas City</h4>
 
-</ol>
+  <ol>
+    <li>Book a cab from Maryville to Kansas Airport.</li>
+    <li>Finish the check-in process through online</li>
+    <ol>
+      <li>Take boarding pass from the self service kiosk</li>
+      <li>Waiting for the flight</li>
+    </ol>
+    <li>Board your flight</li>
+  </ol>
+    
+  <ul>
+    <li>Clothes </li>
+    <ul>
+    <li>Sweatshirt</li>
+    <li>Shoes</li>
+    </ul>
+    <li>Cosmetics
+    <ul>
+    <li>Perfume
+    <li>Body lotions
+    </ul>
+    <li>Cash</li>
+    <li>Snacks</li>
+    <ul>
+    <li>French Fries</li>
+    <li>Cookies</li>
+    </ul>
 
 
 </body>
