about me added in index

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@ aboutme.html
 <p>CaptainAmerica lacks superhuman abilities and instead relies on high-tech equipment, martial arts, and a high level of knowledge.
 His specific anti-crime gear is frequently kept in his utility belt.</p>
 
-<img src="captainamerica" alt="captainamerica" width="500" height="500">
+<img src="captainamerica.jpg" alt="captainamerica" width="500" height="500">
 
 </body>
 </html>
