--- a/aboutme.html
+++ b/aboutme.html
@@ -2,14 +2,14 @@ aboutme.html
 <!doctype html>
 <html>
   <head>
-    <title>CaptainAmerica</title>
+    <title>CaptainIndia</title>
   </head>
   <body>
-<h4>CaptainAmerica</h4>
-<p>CaptainAmerica lacks superhuman abilities and instead relies on high-tech equipment, martial arts, and a high level of knowledge.
+<h4>CaptainIndia</h4>
+<p>CaptainIndia lacks superhuman abilities and instead relies on high-tech equipment, martial arts, and a high level of knowledge.
 His specific anti-crime gear is frequently kept in his utility belt.</p>
 
-<img src="captainamerica.jpg" alt="captainamerica" width="500" height="500">
+<img src="captainamerica.jpg" alt="captainindia" width="500" height="500">
 
 </body>
 </html>
