--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <style>
+        table, th, td {
+            border: 1px solid black; 
+            text-align: center;
+        }
+        </style>
     <title>
         My First Heading
     </title>    
     
     </head>
 <body>
+ 
 
 <h1>  Srikanth Naini</h1>
 <h5>
@@ -55,8 +62,29 @@ Niagara Falls</h5>
 
     <a href="file:///C:/Users/S545257/Documents/GitHub/webapps-f21-assignment-3-srikanth0655/aboutme.html">aboutme</a>
 
-
-
+    <h4>Drinks and Food</h4>
+<table style="width: 40%;">
+<tr>
+    <th>Food/Drink</th>
+    <th>Place</th>
+    <th>Price</th>
+</tr>
+<tr>
+    <td>Coke</td>
+    <td>McDonalds</td>
+    <td>2$</td>
+</tr>
+<tr>
+    <td>Pizza</td>
+    <td>Dominos</td>
+    <td>5$</td>
+</tr>
+<tr>
+    <td>Wings</td>
+    <td>KFC</td>
+    <td>3$</td>
+</tr>
+</table
 </body>
 </html>
 
